# cookiecutter-haskell-wheel

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
local_extensions/: __init__.py
{{cookiecutter.project_slug}}/: .gitignore  CHANGELOG.md  LICENSE  README.md  hie.yaml  pyproject.toml  setup.py  {{cookiecutter.project_slug}}.cabal
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/{{cookiecutter.source_directory}}/{{cookiecutter.__project_slug_camelcase}}/: Binding.hs
{{cookiecutter.project_slug}}/{{cookiecutter.source_directory}}/{{cookiecutter.__project_slug_snakecase}}/: __init__.py  __main__.py  binding.i  binding.pyi
{{cookiecutter.project_slug}}/{{cookiecutter.test_directory}}/: test_{{cookiecutter.__project_slug_snakecase}}.py
