cabal-version:   3.0
name:            {{cookiecutter.project_slug}}
version:         {{cookiecutter.version}}
description:
  An experiment in publishing a Haskell library as a Python Wheel.

license:         MIT
license-file:    LICENSE
author:          {{cookiecutter.fullname}}
maintainer:      {{cookiecutter.email}}
copyright:       (c) 2023 {{cookiecutter.fullname}}
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends:
    , base       >=4
    , Cabal      >=2.0.0.2
    , directory  >=1
    , filepath   >=1

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:           warnings
  type:             native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: {{cookiecutter.source_directory}}/{{cookiecutter.__project_slug_snakecase}}/binding.def

  c-sources:        {{cookiecutter.source_directory}}/{{cookiecutter.__project_slug_snakecase}}/binding_wrap.c
  hs-source-dirs:   {{cookiecutter.source_directory}}
  other-modules:
    {{cookiecutter.__project_slug_camelcase}}.Binding
    Paths_{{cookiecutter.__project_slug_snakecase}}

  build-depends:    base >=4.7 && <5
  default-language: Haskell2010
